@@ -253,6 +253,13 @@ DFhackCExport command_result plugin_onstatechange(color_ostream &out, state_chan
 
 command_result embark_assistant(color_ostream &out, std::vector <std::string> & parameters)
 {
+    bool fileresult = false;
+
+    if (parameters.size() == 1 &&
+        parameters[0] == "fileresult") {
+        remove(fileresult_file_name);
+        fileresult = true;
+    } else
     if (!parameters.empty())
         return CR_WRONG_USAGE;
 
@@ -277,8 +284,11 @@ command_result embark_assistant(color_ostream &out, std::vector <std::string> & 
 
     //  Find the end of the normal inorganic definitions.
     embark_assist::main::state->max_inorganic = 0;
-    for (uint16_t i = 0; i < world->raws.inorganics.size(); i++) {
-        if (!world->raws.inorganics[i]->flags.is_set(df::inorganic_flags::GENERATED)) embark_assist::main::state->max_inorganic = i;
+    for (uint16_t i = world->raws.inorganics.size() - 1; i >= 0 ; i--) {
+        if (!world->raws.inorganics[i]->flags.is_set(df::inorganic_flags::GENERATED)) {
+            embark_assist::main::state->max_inorganic = i;
+            break;
+        }
     }
     embark_assist::main::state->max_inorganic++;  //  To allow it to be used as size() replacement
 
@@ -347,6 +357,10 @@ command_result embark_assistant(color_ostream &out, std::vector <std::string> & 
     embark_assist::survey::survey_mid_level_tile(&embark_assist::main::state->geo_summary, &embark_assist::main::state->survey_results, &mlt);
     embark_assist::survey::survey_embark(&mlt, &embark_assist::main::state->survey_results, &embark_assist::main::state->site_info, false);
     embark_assist::overlay::set_embark(&embark_assist::main::state->site_info);
+
+    if (fileresult) {
+        embark_assist::overlay::fileresult();
+    }
 
     return CR_OK;
 }
