@@ -85,6 +85,8 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
     - changed matching to take incursions, i.e. parts of other biomes, into consideration when evaluating tiles. This allows for e.g. finding multiple biomes on single tile embarks.
     - changed overlay display to show when incursion surveying is incomplete
     - changed overlay display to show evil weather
+    - added optional parameter "fileresult" for crude external harness automated match support
+    - improved focus movement logic to go to only required world tiles, increasing speed of subsequent searches considerably
 - `exportlegends`: added rivers to custom XML export
 - `exterminate`: added support for a special ``enemy`` caste
 - `modtools/create-unit`:
